[package]
name = "unqlite-sys"
version = "0.1.0"
authors = ["Huo Linhe <huolinhe@berrygenomics.com>"]
build = "build.rs"
license = "MIT"
readme  = "README.md"
homepage = "https://github.com/zitsen/unqlite-sys.rs"
repository = "https://github.com/zitsen/unqlite-sys.rs.git"
documentation = "http://zitsen.github.io/unqlite-sys.rs/unqlite-sys/index.html"
description = "Rust `unqlite` bindings."
keywords = ["unqlite", "kv", "nosql", "binding"]

[dependencies]
libc = "0.2.4"

[build-dependencies]
gcc = "0.3.21"
pkg-config = "0.3.6"

