[package]
name = "unqlite-sys"
version = "1.1.0"
authors = ["Huo Linhe <huolinhe@berrygenomics.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"
readme  = "README.md"
homepage = "https://github.com/zitsen/unqlite-sys.rs"
repository = "https://github.com/zitsen/unqlite-sys.rs.git"
documentation = "http://zitsen.github.io/unqlite-sys.rs"
description = "Rust `unqlite` bindings."
keywords = ["unqlite", "kv", "nosql", "binding"]

[dependencies]

[build-dependencies]
gcc = "^0.3"

[features]
# no features by default
default = []
# UNQLITE_ENABLE_THREADS
enable-threads = []
# Options To Omit/Enable Features
jx9-disable-builtin-func = []
jx9-enable-math-func = []
jx9-disable-disk-io = []
enable-jx9-hash-io = []
